2005-02-19  Carlos Nieves Onega <cnieves@iespana.es>

        * configure.ac, include/funcs.h, include/libgeda.h, 
	  include/o_types.h, include/prototype.h, include/struct.h,
	  noweb/Makefile.am, noweb/a_basic.nw, noweb/f_image.nw,
	  noweb/f_print.nw, noweb/gdk-pixbuf-hacks.nw, noweb/o_attrib.nw,
	  noweb/o_basic.nw, noweb/o_complex_basic.nw, noweb/o_list.nw,
	  noweb/o_picture.nw, noweb/s_basic.nw, noweb/s_toplevel.nw,
	  src/Makefile.am:
	  Added picture support.
	
2005-02-18 22:26  Dan McMahill <danmc>

	* noweb/g_rc.nw: remove a static declaration to match prototype in
	  prototype.h

2005-02-17 20:00  Stuart Brorson <sdb@cloud9.net>
	* noweb/g_rc.nw, noweb/libgeda.nw: Reverted to putenv after
	W. Hoch had problems with compiling g_setenv.

2005-02-14 22:32  Dan McMahill <danmc>

	* noweb/o_complex_basic.nw: fix a couple of format string not
	  matching # of arguments bugs

2005-02-14 22:32  Dan McMahill <danmc>

	* noweb/f_basic.nw: remove an unused variable

2005-02-14 22:31  Dan McMahill <danmc>

	* noweb/s_clib.nw: add some missing config.h inclusions

2005-02-14 22:30  Dan McMahill <danmc>

	* noweb/a_basic.nw: fix a "/* in a comment" warning

2005-02-14 22:29  Dan McMahill <danmc>

	* include/prototype.h: change prototypes in public header file to
	  not be static

2005-02-14 02:17  Dan McMahill <danmc>

	* include/defines.h, noweb/g_basic.nw, noweb/g_smob.nw: put back
	  scm_makfrom0str().  It is scm_makfromstr() which was deprecated,
	  scm_makfrom0str() is still ok.  Suggested by Patrick Bernaud.

2005-02-13  Patrick Bernaud  <b-patrick@wanadoo.fr>

	* noweb/s_page.nw (s_page_init_list): Removed useless initialization 
	of page head fields.

	* docs/Makefile.am, src/Makefile.am, noweb/Makefile.am: 
	* docs/libgedadoc.texi: Updated after removal of s_scratch.

	* noweb/s_scratch.nw: Removed.

2005-02-13 01:38  Dan McMahill <danmc>

	* include/prototype.h, noweb/s_slib.nw: fix up const usage to be
	  consistant.  Gets rid of several gcc warnings.
